--- a/source/css/main.css
+++ b/source/css/main.css
@@ -22,6 +22,7 @@
 @import url('./components/breadcrumb.css');
 @import url('./components/pagination.css');
 @import url('./components/input.css');
+@import url('./components/ad.css');
 
 /* Utilities */
 @import url('./utilities/helpers.css');
